--- a/CM_flutter_project/plantica/pubspec.yaml
+++ b/CM_flutter_project/plantica/pubspec.yaml
@@ -15,6 +15,7 @@ dependencies:
   english_words: ^4.0.0
   provider: ^6.0.0
   flutter_slidable: ^3.1.1
+  google_fonts: ^6.2.1
 
 dev_dependencies:
   flutter_test:
@@ -24,3 +25,6 @@ dev_dependencies:
 
 flutter:
   uses-material-design: true
+  assets:
+    - assets/imgs/
+
