--- a/CM_flutter_project/plantica/pubspec.yaml
+++ b/CM_flutter_project/plantica/pubspec.yaml
@@ -11,11 +11,13 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-
+  connectivity_plus: ^4.0.0
   english_words: ^4.0.0
   provider: ^6.0.0
   flutter_slidable: ^3.1.1
   google_fonts: ^6.2.1
+  sqflite: 2.2.8+4
+  shared_preferences: ^2.0.15
 
 dev_dependencies:
   flutter_test:
