--- a/CM_flutter_project/plantica/pubspec.yaml
+++ b/CM_flutter_project/plantica/pubspec.yaml
@@ -18,6 +18,10 @@ dependencies:
   provider: ^6.0.0
   flutter_slidable: ^3.1.1
 
+  sqflite: ^2.2.5  # Verifique a versão mais recente
+  path: ^1.8.3     # Para manipulação de caminhos
+
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
