--- a/CM_flutter_project/plantica/pubspec.yaml
+++ b/CM_flutter_project/plantica/pubspec.yaml
@@ -14,12 +14,15 @@ dependencies:
   image_picker: ^0.8.4+1
   http: ^1.1.0
 
+  connectivity_plus: ^4.0.0
   english_words: ^4.0.0
   provider: ^6.0.0
   flutter_slidable: ^3.1.1
+  google_fonts: ^6.2.1
+  sqflite: 2.2.8+4
+  shared_preferences: ^2.0.15
+  path: ^1.8.3
 
-  sqflite: ^2.2.5  # Verifique a versão mais recente
-  path: ^1.8.3     # Para manipulação de caminhos
 
 
 dev_dependencies:
@@ -30,3 +33,6 @@ dev_dependencies:
 
 flutter:
   uses-material-design: true
+  assets:
+    - assets/imgs/
+
