first try wih sensor api

--- a/CM_flutter_project/plantica/pubspec.yaml
+++ b/CM_flutter_project/plantica/pubspec.yaml
@@ -15,9 +15,13 @@ dependencies:
   english_words: ^4.0.0
   provider: ^6.0.0
   flutter_slidable: ^3.1.1
-  google_fonts: ^6.2.1
   sqflite: 2.2.8+4
   shared_preferences: ^2.0.15
+  flutter_blue: ^0.8.0
+  crypto: ^3.0.0
+  http: ^1.0.0
+  google_fonts: ^6.2.1
+  uuid: ^3.0.6 
 
 dev_dependencies:
   flutter_test:
