--- a/CM_flutter_project/plantica/pubspec.yaml
+++ b/CM_flutter_project/plantica/pubspec.yaml
@@ -1,7 +1,7 @@
 name: plantica
 description: A new Flutter project.
 
-publish_to: 'none' # Remove this line if you wish to publish to pub.dev
+publish_to: "none" # Remove this line if you wish to publish to pub.dev
 
 version: 0.0.1+1
 
@@ -11,6 +11,9 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  image_picker: ^0.8.4+1
+  http: ^1.1.0
+
   connectivity_plus: ^4.0.0
   english_words: ^4.0.0
   provider: ^6.0.0
@@ -18,6 +21,9 @@ dependencies:
   google_fonts: ^6.2.1
   sqflite: 2.2.8+4
   shared_preferences: ^2.0.15
+  path: ^1.8.3
+
+
 
 dev_dependencies:
   flutter_test:
