--- a/CM_flutter_project/plantica/pubspec.yaml
+++ b/CM_flutter_project/plantica/pubspec.yaml
@@ -13,7 +13,7 @@ dependencies:
     sdk: flutter
   image_picker: ^0.8.4+1
   http: ^1.1.0
-
+  flutter_bloc: ^8.0.0
   connectivity_plus: ^4.0.0
   english_words: ^4.0.0
   provider: ^6.0.0
