--- a/CM_flutter_project/plantica/pubspec.yaml
+++ b/CM_flutter_project/plantica/pubspec.yaml
@@ -22,6 +22,8 @@ dependencies:
   sqflite: 2.2.8+4
   shared_preferences: ^2.0.15
   path: ^1.8.3
+  flutter_bloc: ^8.0.0
+  equatable: ^2.0.0
 
 
 
